--- a/index.html
+++ b/index.html
@@ -39,6 +39,70 @@
 
 </div>
     </div>
+    <div id="about">
+        
+        <section class="section_all">
+            <div class="container">
+                <h3 class="font-weight-bold">Welcome To <span class="text-custom">Take Hearts Event</span></h3>
+                <div class="row vertical_content_manage mt-5">
+                    <div class="col-lg-6">
+                        <div class="about_header_main mt-3">
+                            <div class="about_icon_box">
+                                <p>Greetings,</p>
+                            </div>
+                            <h4 class="about_heading text-capitalize font-weight-bold mt-4">No idea where to start? Take Heart!</h4>
+                            <p >Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+
+                            <p> Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="img_about mt-3">
+                            <img src="https://i.ibb.co/qpz1hvM/About-us.jpg" alt="" class="img-fluid mx-auto d-block">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row mt-3">
+                    <div class="col-lg-4">
+                        <div class="about_content_box_all mt-3">
+                            <div class="about_detail text-center">
+                                <div class="about_icon">
+                                    <i class="fas fa-pencil-alt"></i>
+                                </div>
+                                <h5 class="text-light text-capitalize mt-3 font-weight-bold">Creative Design</h5>
+                                <p >Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <div class="about_content_box_all mt-3">
+                            <div class="about_detail text-center">
+                                <div class="about_icon">
+                                    <i class="fab fa-angellist"></i>
+                                </div>
+                                <h5 class="text-light text-capitalize mt-3 font-weight-bold">We make Best Result</h5>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <div class="about_content_box_all mt-3">
+                            <div class="about_detail text-center">
+                                <div class="about_icon">
+                                    <i class="fas fa-paper-plane"></i>
+                                </div>
+                                <h5 class="text-light text-capitalize mt-3 font-weight-bold">best platform </h5>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
     <div id="service">
         <section class="section section-default mt-none mb-none section-services">
             <div class="container">
