--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="img_about mt-3">
-                            <img src="https://i.ibb.co/qpz1hvM/About-us.jpg" alt="" class="img-fluid mx-auto d-block">
+                            <img src="https://5.imimg.com/data5/TT/RR/MY-18676787/event-management-services.jpg" alt="" class="img-fluid mx-auto d-block">
                         </div>
                     </div>
                 </div>
